# SDL_SA

./: .gitignore  CMakeLists.txt  GAME_Tetris.c  SDL_SA.cbp  SDL_SA.depend  SDL_SimpleAbstraction.c  SDL_SimpleAbstraction.h
Tetris/: GAME_Tetris.c
